ui: fix overflow issue

--- a/OwnerGPT.WebUI.Admin/wwwroot/css/style.css
+++ b/OwnerGPT.WebUI.Admin/wwwroot/css/style.css
@@ -10,7 +10,6 @@
 body, html {
     height: 100vh;
     position: relative;
-    overflow: hidden;
 }
 
 .wrapper-container {
